@@ -186,6 +186,8 @@ katriawm introduces a new property on the root window called
     `m` where `0 <= m < N`.
 -   Index 2 is a bitmask. If the `n`-th bit is set, then the `n`-th save
     slot is occupied.
+-   Index 3 is `1` if urgency hints are currently being ignored by the
+    WM and `0` otherwise.
 -   The next `N` bytes indicate the active workspace on each monitor. A
     workspace is an integer `w` where `0 <= w <= 127`.
 -   The next `N` bytes indicate the visible layout algorithm on each
