@@ -97,6 +97,12 @@ when there are only two monitors connected. Clients on the
 \fBurgency_clear_visible\fP
 Clears the urgency hint on all currently visible windows.
 .TP
+\fBurgency_mute_toggle\fP
+Toggles \(lqmute mode\(rq. When enabled, there won't be any indicators
+showing window urgency. Urgency hints are still managed, though, so upon
+disabling mute mode, you will instantly see which windows have their
+urgency hint set.
+.TP
 \fBwm_restart\fP
 Causes \fBkatriawm\fP to restart.
 .TP
